# fftbenchmarks

./: .gitignore  CMakeLists.txt  accfft_3d_plan.cpp  accfft_3d_plan_gpu.cu  accfft_3d_plane.cpp  accfft_3d_plane_gpu.cu  cuda_visible_wrapper.sh  fftbenchmarks_utils.h  fftw_2d_plane.cpp  fftw_3d_plan.cpp
cmake/: FindAccFFT.cmake  FindFFTW.cmake  LibFindMacros.cmake
